# target-airtable

./: .gitignore  README.md  meltano.yml  pyproject.toml  target-airtable.sh
target_airtable/: sinks.py  target.py
target_airtable/tests/: __init__.py  test_core.py
