[tool.poetry]
name = "target-airtable"
version = "0.0.2"
description = "`target-airtable` is a Singer target for Airtable, built with the Meltano SDK for Singer Targets."
authors = ["hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
requests = "^2.25.1"
singer-sdk = "^0.3.2"
airtable-python = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-airtable = 'target_airtable.target:TargetAirtable.cli'
